[package]
name = "relevansy"
version = "0.1.0"
edition = "2024"

[features]
default = ["qdrant", "ollama"]
qdrant = ["dep:qdrant-client"]
ollama = ["dep:reqwest"]

[dependencies]
tokio = { version = "1", features = ["full"] }
qdrant-client = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
thiserror = "1"
miette = { version = "7", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"], optional = true }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
rand = "0.8"

[[example]]
name = "value_aware_reranking"
path = "examples/value_aware_reranking.rs"

[[example]]
name = "industrial_batch_tuning"
path = "examples/industrial_batch_tuning.rs"
required-features = ["qdrant", "ollama"]

[[example]]
name = "recsys_movie_discovery"
path = "examples/recsys_movie_discovery.rs"
